Fix the header from going off center when shrinking the screen
The header on the second section of the website "Some random infromation" would go off center when shrinking the the window.

This will keep it centered.

--- a/style.css
+++ b/style.css
@@ -95,8 +95,14 @@ border-color: #3882f6;
     display: flex;
     flex-direction: column;
     gap: 10px; 
-    align-items: center;
     padding: 10px 100px 100px 100px;
+}
+
+.middle-container-one h1 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937; 
+   text-align: center;
 }
 
 .box {
@@ -122,3 +128,5 @@ border-color: #3882f6;
 .box-holder p {
     padding: 5px;
 }
+
+
